[package]
name = "json_keyquotes_convert"
description = "A Rust library crate to convert JSON from and to JSON without key-quotes."
version = "0.1.0"
edition = "2021"
license = "MIT"
license-file = "LICENSE"
repository = "https://https://github.com/Andreas02-dev/json_keyquotes_convert_rs/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.5"
