[package]
name = "json_keyquotes_convert"
description = "A Rust library crate to convert JSON from and to JSON without key-quotes."
version = "0.2.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/Andreas02-dev/json_keyquotes_convert_rs/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.5"
once_cell = "1.16.0"